# CREWAI-X-Agent

./: .gitignore  README.md  bytebrief_crew.py  google_docs_tool.py  main.py  pyproject.toml  requirements.txt  setup_google_docs.py
