[project]
name = "bytebrief-crew"
version = "0.1.0"
description = "It is a script when run can generate 2 Tweet style Twitter thread related to Tech, Startup and Business"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai[tools]>=0.152.0",
    "google-api-python-client>=2.177.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "requests>=2.32.4",
    "snscrape",
]

[tool.uv.sources]
snscrape = { git = "https://github.com/JustAnotherArchivist/snscrape.git" }
